# bec_widgets

./: .gitlab-ci.yml  .pylintrc  CHANGELOG.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  end2end-conda.yml  formatter.yml  pytest-matrix.yml  pytest.yml
bec_widgets/: __init__.py  basic_plot.ui  bec_dispatcher.py  cli.py  client.py  config_plotter.py  line_plot.py  line_plot.ui  readme.md  scan2d_plot.py  scan2d_plot_plugin.py  scan_plot.py  scan_plot_plugin.py
bec_widgets/applications/: bw_launch.py  launch_dialog.ui  launch_window.py
bec_widgets/cli/: auto_updates.py  client.py  client_utils.py  generate_cli.py  rpc_register.py  rpc_wigdet_handler.py  server.py
bec_widgets/examples/: __init__.py
bec_widgets/plugin/: main.py  plugin_launch.py  registertictactoe.py  tictactoe.py  tictactoeplugin.py  tictactoetaskmenu.py
bec_widgets/qt_utils/: compact_popup.py  crosshair.py  crosshair_example.py  (+11 more)
docs/: conf.py  index.md  requirements.txt
tests/: client_mocks.py  conftest.py  test_basic_plot.py  test_bec_connector.py  test_bec_device_monitor.py  test_bec_dispatcher.py  test_bec_figure.py  test_bec_monitor.py  test_bec_monitor_scatter2D.py  test_bec_motor_map.py  test_config_dialog.py  test_config_plotter.py  test_crosshair.py  test_editor.py  test_eiger_plot.py  test_extreme.py  test_hierarchy.py  test_line_plot.py  test_motor_map.py  test_plot_app.py  test_plot_base.py  test_problem.py  test_scan_control.py  test_scan_plot.py  test_stream_plot.py  test_validator_errors.py  test_waveform1d.py  test_widget_io.py  test_yaml_dialog.py
(+493 files in other folders)
